0.4.x: improve test coverage